# Ocu-Trust

./: README.md  deepseek_json_20260126_1795da.json  deepseek_rust_20260126_57fd96.rs  deepseek_rust_20260126_674746.rs  deepseek_rust_20260126_71caf2.rs  deepseek_rust_20260126_c83b51 (1).rs  deepseek_rust_20260126_cb0e55.rs  deepseek_rust_20260126_e447c1.rs  deepseek_rust_20260126_e719e9.rs  deepseek_text_20260126_f2728b.txt  deepseek_text_20260126_f51d02.txt
aln/datashards/: evolution-oculus-v1.aln
aln/oculus/: oculus-corridor-v1.aln  oculus-envelope-v1.aln
config/: oculus_evidence_bundle.json
crates/: oculus-corridor-srccore.rs
crates/bioscale-upgrade-store/src/: oculus_fields.rs
crates/evolution-oculus-datashard/src/: lib.rs
crates/oculomotor-corridor/src/: envelope.rs  state.rs
crates/oculus-corridor-blink/: Cargo.toml
crates/oculus-corridor-blink/src/: calibration.rs  lib.rs
crates/oculus-corridor-src/: lib.rs
crates/oculus-corridor/src/: lib.rs
crates/visual-corridor-blink/src/: calibration.rs
crates/xr-neuro-ergonomics/src/: lib.rs
crates/xr-oculomotor-profile/src/: lib.rs
docs/: From-Biopolymers-to-Biophysics-A-Systemic-Roadmap-for-Safe-Neuro-HCI-and-Collaborative-Eco-Incentives.md
